# Sudoku-Solver-With-CV

./: .gitignore  sudoku_extractor.py
project/: README.md  pyproject.toml  requirements.txt
project/scripts/: evaluate_digits.py  run_pipeline.py  run_pipeline_batch.py  train_digits.py
project/src/sudoku_cv/: __init__.py  __main__.py  config.py  digits.py  grid.py  helper.py  pipeline.py  solver.py
project/src/sudoku_cv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
